force-app/main/default/objects/Patient_Milestone__c/Patient_Milestone__c.object-meta.xml
<CustomObject>
    <label>Patient Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>