force-app/main/default/objects/Patient_Milestone__c/fields/COI_Generation__c.field-meta.xml
<CustomField>
    <fullName>COI_Generation__c</fullName>
    <formula>Study_Milestone__r.COI_Generation__c</formula>
    <label>COI Generation</label>
    <type>Checkbox</type>
</CustomField>