force-app/main/default/objects/Patient_Milestone__c/fields/Patient_Journey__c.field-meta.xml
<CustomField>
    <fullName>Patient_Journey__c</fullName>
    <label>Patient Journey</label>
    <referenceTo>Patient_Journey__c</referenceTo>
    <relationshipLabel>Patient Milestones</relationshipLabel>
    <relationshipName>Patient_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>