force-app/main/default/objects/Patient_Milestone__c/fields/Site_Facing__c.field-meta.xml
<CustomField>
    <fullName>Site_Facing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Facing</label>
    <type>Checkbox</type>
</CustomField>