force-app/main/default/objects/Patient_Milestone__c/fields/Study_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Study_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Milestone</label>
    <referenceTo>Study_Milestone__c</referenceTo>
    <relationshipLabel>Patient Milestones</relationshipLabel>
    <relationshipName>Patient_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>