force-app/main/default/objects/Patient_Milestone__c/fields/Write_Access_Queues__c.field-meta.xml
<CustomField>
    <fullName>Write_Access_Queues__c</fullName>
    <label>Write Access Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Site</fullName>
            </value>
            <value>
                <fullName>Logistics Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Warehouse Operator</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Manufacturing Scheduler</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
                <isActive>false</isActive>
                <label>Q1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>